feat: add base of html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Maria Omelyanchuk CV</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      
+      
+    </div>
+  </body>
+</html>
 
