--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
   </head>
   <body>
     <div class="main">
-      
+    <aside>
+        <figure>
+          <img class="photo" src="photo-for-CV.jpg" alt="photo" />
+        </figure>
+        <section class="contact">
+          <h3>Contact info</h3>
+          <h4>Phone:</h4>
+          <p>+7-909-692-35-20</p>
+          <h4>E-mail:</h4>
+          <p>maria.omelyanchuk@gmail.com</p>
+        </section>
+        <section class="skills">
+          <h3>Technical Skills</h3>
+          <p>HTML, CSS, JS</p>
+          <p>Git, VS Code</p>
+          <p>Adobe PS, SketchUp</p>
+          <p>Google Forms</p>
+        </section>
+        <section class="languages">
+          <h3>Languages</h3>
+          <p>English: <b>B1</b></p>
+        </section>
+      </aside>  
       
     </div>
   </body>
