feat: add right side of CV

--- a/index.html
+++ b/index.html
@@ -31,7 +31,57 @@
           <p>English: <b>B1</b></p>
         </section>
       </aside>  
-      
+      <article>
+        <section class="summary">
+          <h1>Maria Omelyanchuk</h1>
+          <h3>Summary</h3>
+          <p>
+            After 6+ years of Bank experience I decided to change my career path
+            to Front-end development
+          </p>
+          <p>
+            <b>Soft-skills:</b> highly organized, problem solving, good
+            communication skills
+          </p>
+        </section>
+        <section class="experience">
+          <h3>Experience</h3>
+          <ul>
+            <li>
+              <b>2015 - 2021</b> Freelancer
+              <p>
+                Wordpress and Opencart projects: web-design, layout, support
+              </p>
+            </li>
+            <li>
+              <b>2013 - 2014</b> Individual Enterprener
+              <p>Online store owner: full process support</p>
+            </li>
+            <li>
+              <b>2006 - 2012</b> Credit & Factoring Departments in a Bank
+              <p>
+                from Intern to Head of Department of Methodology: reports
+                making, development and approval of documents, resolve
+                crossdivision problems, staff management
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="education">
+          <h3>Education</h3>
+          <ul>
+            <li><b>08.2020 - 02.2021</b> CodeWars</li>
+            <li>
+              <b>05.2020 - 08.2020</b> Codecademy Courses
+              <p>Web Development, Learn JavaScript, Learn Color Design</p>
+            </li>
+            <li>
+              <b>09.2001 - 06.2005</b> Novosibirsk State University
+              <p>Applied Mathematics and Computer Science, Bachelor Degree</p>
+            </li>
+          </ul>
+        </section>
+      </article>
     </div>
   </body>
 </html>
