--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
         </section>
       </article>
     </div>
+    <footer>
+      <section class="github">
+        <a href="https://github.com/maryko-makk" target="_blank"
+          ><img class="github" src="github.png" alt="github"
+        /></a>
+      </section>
+      <time><b>&nbsp;February 2021&nbsp;</b></time>
+      <section class="rsschool">
+        <a href="https://rs.school/js/" target="_blank">
+          <img
+            class="logo"
+            src="https://rs.school/images/rs_school_js.svg"
+            alt="RS.School"
+          />
+        </a>
+      </section>
+    </footer>
   </body>
 </html>
 
