fix: change tag time to p

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           ><img class="github" src="github.png" alt="github"
         /></a>
       </section>
-      <time><b>&nbsp;February 2021&nbsp;</b></time>
+      <p><b>&nbsp;February 2021&nbsp;</b></p>
       <section class="rsschool">
         <a href="https://rs.school/js/" target="_blank">
           <img
