fix: change tag section to div in footer

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
       </article>
     </div>
     <footer>
-      <section class="github">
+      <div class="github">
         <a href="https://github.com/maryko-makk" target="_blank"
           ><img class="github" src="github.png" alt="github"
         /></a>
-      </section>
+      </div>
       <p><b>&nbsp;February 2021&nbsp;</b></p>
-      <section class="rsschool">
+      <div class="rsschool">
         <a href="https://rs.school/js/" target="_blank">
           <img
             class="logo"
@@ -98,7 +98,7 @@
             alt="RS.School"
           />
         </a>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
