--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
         </figure>
         <section class="contact">
           <h3>Contact info</h3>
-          <h4>Phone:</h4>
-          <p>+7-909-692-35-20</p>
-          <h4>E-mail:</h4>
-          <p>maria.omelyanchuk@gmail.com</p>
+          <ul>
+            <li><h4>Phone:</h4></li>
+            <li>+7-909-692-35-20</li>
+            <li><h4>E-mail:</h4></li>
+            <li>maria.omelyanchuk@gmail.com</li>
+          </ul>
         </section>
         <section class="skills">
           <h3>Technical Skills</h3>
-          <p>HTML, CSS, JS</p>
-          <p>Git, VS Code</p>
-          <p>Adobe PS, SketchUp</p>
-          <p>Google Forms</p>
+          <ul>
+            <li>HTML, CSS, JS</li>
+            <li>Git, VS Code</li>
+            <li>Adobe PS, SketchUp</li>
+            <li>Google Forms</li>
+          </ul>
         </section>
         <section class="languages">
           <h3>Languages</h3>
-          <p>English: <b>B1</b></p>
+          <ul>
+            <li>English: <b>B1</b></li>
+          </ul>
         </section>
       </aside>  
       <article>
